--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: EMMA XIE
-email: emma.xie@uwaterloo.com
+title: Raymond Chou
+email: >
 description: > # this means to ignore newlines until "baseurl:"
-  Emma Xie personal portfolio
+  Raymond Chou's Design Portfolio
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://eexie.github.io" # the base hostname & protocol for your site
-twitter_username: _eexie 
-github_username:  eexie
+url: "http://raymond3chou.github.io" # the base hostname & protocol for your site
+twitter_username: > 
+github_username:  raymond3chou
 # Build settings
 markdown: kramdown
