--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: >
 description: > # this means to ignore newlines until "baseurl:"
   Raymond Chou's Design Portfolio
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://raymond3chou.github.io" # the base hostname & protocol for your site
+url: "https://raymond3chou.github.io/Design-Portfolio" # the base hostname & protocol for your site
 twitter_username: > 
 github_username:  raymond3chou
 # Build settings
