--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-_site
-.sass-cache
-.jekyll-metadata
-.bundle
-vendor
-assets/.DS_Store
-.DS_Store
-fonts/.DS_Store
-__pycache__
-node_modules
+node_modules/
