--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "twitter-new",
-  "version": "0.0.0",
-  "description": "Home of twitter.github.io",
+  "name": "devportfolio-template",
+  "version": "1.1.3",
+  "description": "",
+  "main": "js/scripts.js",
   "scripts": {
-    "build:css": "./scripts/optimize_css; ./scripts/clean_feather_css"
+    "watch": "gulp watch"
   },
+  "keywords": [
+    "portfolio",
+    "personal",
+    "website",
+    "tech",
+    "coding",
+    "dev"
+  ],
+  "author": "Ryan Fitzgerald",
+  "license": "MIT",
   "devDependencies": {
-    "cssnano": "^4.1.0",
-    "postcss-cli": "^6.0.0"
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
+    "gulp-wait": "0.0.2"
   }
 }
